--- a/azure-vote/azure-vote/config_file.cfg
+++ b/azure-vote/azure-vote/config_file.cfg
@@ -1,5 +1,5 @@
 # UI Configurations
 TITLE = 'Azure Voting App'
-VOTE1VALUE = 'Blue'
-VOTE2VALUE = 'Purple'
+VOTE1VALUE = 'Haha'
+VOTE2VALUE = 'Hihi'
 SHOWHOST = 'false'
