--- a/azure-vote/azure-vote/config_file.cfg
+++ b/azure-vote/azure-vote/config_file.cfg
@@ -1,5 +1,5 @@
 # UI Configurations
 TITLE = 'Azure Voting App'
-VOTE1VALUE = 'Haha'
-VOTE2VALUE = 'Hiho'
+VOTE1VALUE = 'ADI'
+VOTE2VALUE = 'IMAM'
 SHOWHOST = 'false'
